[package]
name = "autograder-rs"
version = "0.1.0"
authors = ["Peter Ho <pho@buhao.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.33"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
